# dart

./: .appveyor.yml  .azure-pipelines.yml  .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .codespellrc  .gersemirc  .gitattributes  .gitignore  .hgignore  .readthedocs.yml  .travis.yml  AGENTS.md  Brewfile  CHANGELOG.md  CITATION.bib  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Changelog.md  DARTConfig.cmake.in  DART_Demo_Hub.ini  DART_Demo_Hub__Python_.ini  DART_config.cmake  DART_config.cmake.in  Directories.cmake  Directories.cmake.generic  Directories.cmake.old  Directories.cmake.sehoon  Dockerfile  Doxyfile  GEMINI.md  LICENSE  Migration.md  README.md  README.txt  README_KRANG.txt  TYPO_SEARCH_RESULTS.md  (+27 more)
RTQL8/trunk/: CMakeLists.txt  test.txt
apps/: CMakeLists.txt  README.md
apps/CS7496_project1/: Main.cpp  MyWorld.h
apps/Galileo/: CMakeLists.txt  Main.cpp  MyWindow.cpp  MyWindow.h  MyWorld.cpp  MyWorld.h  Particle.cpp  Particle.h
apps/Lemke_fix/: CMakeLists.txt  main.cpp
apps/activity1/: CMakeLists.txt  Controller.cpp  Main.cpp  MyWindow.cpp  MyWindow.h
apps/activity2/: CMakeLists.txt  Controller.cpp  Controller.h  Main.cpp  MyWindow.cpp  MyWindow.h
apps/addDeleteSkels/: CMakeLists.txt  Main.cpp  MyWindow.cpp  MyWindow.h  MyWindow.hpp
apps/atlasRobot/: CMakeLists.txt  Controller.cpp  Controller.h  Humanoid.cpp  Humanoid.h  Main.cpp  MyWindow.cpp  MyWindow.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  TerminalCondition.cpp  TerminalCondition.h
apps/atlasSimbicon/: CMakeLists.txt  Controller.cpp  Controller.h  Controller.hpp  Humanoid.cpp  Humanoid.h  Humanoid.hpp  Main.cpp  MyWindow.cpp  MyWindow.h  MyWindow.hpp  State.cpp  State.h  State.hpp  StateMachine.cpp  StateMachine.h  StateMachine.hpp  TerminalCondition.cpp  TerminalCondition.h  TerminalCondition.hpp
apps/balance/: CMakeLists.txt  Controller.cpp  Controller.h  Main.cpp  MyWindow.cpp  MyWindow.h
apps/ballJointConstraintTest/: CMakeLists.txt  Main.cpp  MyWindow.cpp  MyWindow.h
apps/bipedCMA/: CMAOptimizer.cpp  CMAOptimizer.h  CMakeLists.txt  Controller.cpp  Controller.h  Main.cpp  MyWindow.cpp  MyWindow.h
apps/bipedStand/: CMakeLists.txt  Controller.cpp  Controller.h  Controller.hpp  Main.cpp  (+3 more)
dart/: All.hpp  CMakeLists.txt  Export.hpp  all.hpp  config.h.in  config.hpp.in  dart  dart-core  dart-core.h  dart.cpp  dart.h  dart.hpp  export.hpp
dart7/: CMakeLists.txt  fwd.hpp  version.hpp  version.hpp.in  world.cpp  world.hpp
dart8/: CMakeLists.txt  export.hpp  fwd.hpp  version.hpp  version.hpp.in  world.cpp  world.hpp
dartsim/: CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md  gui_scene_example.cmake  gui_scene_launcher.cpp  gui_source_grid.hpp  mesh_loader_example.cpp
examples_dart7/: CMakeLists.txt  hello_dart7.cpp  utilities_demo.cpp
examples_dart8/: CMakeLists.txt  hello_dart8.cpp  utilities_demo.cpp
kido/: CMakeLists.txt  config.h.in  config.hpp.in  kido-all.hpp  kido-core.hpp  kido.cpp  kido.h  kido.hpp
osgKido/: CMakeLists.txt  DefaultEventHandler.cpp  DefaultEventHandler.h  DefaultEventHandler.hpp  DragAndDrop.cpp  DragAndDrop.h  DragAndDrop.hpp  EntityNode.cpp  EntityNode.h  FrameNode.cpp  FrameNode.h  InteractiveFrame.cpp  InteractiveFrame.h  InteractiveFrame.hpp  MouseEventHandler.h  MouseEventHandler.hpp  SupportPolygonVisual.cpp  SupportPolygonVisual.h  SupportPolygonVisual.hpp  TrackballManipulator.cpp  TrackballManipulator.h  TrackballManipulator.hpp  Utils.hpp  Viewer.cpp  Viewer.h  Viewer.hpp  WorldNode.cpp  WorldNode.h  WorldNode.hpp  osgDart.h.in  osgKido.hpp.in
python/: AGENTS.md  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile.defs  Makefile.defs.osx
tests/: AGENTS.md  CMakeLists.txt  GTestUtils.hpp  README.md  TestHelpers.hpp  test_ai_infrastructure.py  test_allocator_comparative_check.py  test_avbd_packet_schema.py  test_benchmark_packet_utils.py  test_check_agent_hook.py  test_check_architecture_page_lint.py  test_check_avbd_packets.py  test_check_docs_policy.py  test_check_ipc_scene_manifest.py  test_check_plan122_allocation_matrix.py  test_coverage_report.py  test_generate_community_signals_dashboard.py  test_install_git_hooks.py  test_newton_assembly_solve_packet.py  test_performance_dashboard_benchmarks.py  test_plan083_completion_audit.py  test_plan083_cpu_scene_corpus.py  test_plan083_cpu_scene_packet.py  test_plan083_gpu_barrier_friction_packet.py  test_plan083_gpu_ccd_line_search_packet.py  test_plan083_gpu_contact_candidate_packet.py  test_plan083_gpu_parity_packet.py  test_plan083_gpu_psd_packet.py  test_plan083_gpu_scene_parity_packet.py  test_plan091_cross_family_metrics_packet.py  test_rigid_ipc_fixture_manifest_tools.py  test_run_benchmark_smoke.py  test_run_cpp_example.py  test_setup_ai.py  test_sync_ai_commands.py  test_test_all.py
tutorials/: Biped.md  CMakeLists.txt  Collisions_note.md  DART_note.txt  Dominoes_note.md  README.md  Typo  barrett_manipulator.cpp  dedominoes_barrett_manipulator.cpp  toy_example_MPC.cpp  tutorialBiped-Finished.cpp  tutorialBiped.cpp  tutorialCollisions-Finished.cpp  tutorialCollisions.cpp  tutorialCompoundPendulum.cpp  tutorialDominoes-Finished.cpp  tutorialDominoes.cpp  tutorialMultiPendulum-Finished.cpp  tutorialMultiPendulum.cpp
unittests/: .gitignore  CMakeLists.txt  GTestUtils.hpp  TestHelpers.h  TestHelpers.hpp  testAddon.cpp  testAspect.cpp  testBuilding.cpp  testCollision.cpp  testCommon.cpp  testCompositeResourceRetriever.cpp  testConcurrency.cpp  testConstraint.cpp  testCurves.cpp  testDartLoader.cpp  testDifferentials.cpp  testDistance.cpp  testDrawRRT.cpp  testDynamics.cpp  testEquationOfMotion.cpp  testFileInfoWorld.cpp  testForwardKinematics.cpp  testFrames.cpp  testGenericJoints.cpp  testGeometry.cpp  testInverseKinematics.cpp  testJoints.cpp  testKidoLoader.cpp  testKinematics.cpp  testKinematics.cpp_  testLemke.cpp  testLocalResourceRetriever.cpp  testMath.cpp  testNameChanges.cpp  testNameManagement.cpp  testNearestNeighbor.cpp  testOptimizer.cpp  testPackageResourceRetriever.cpp  testParser.cpp  testRelativeResourceRetriever.cpp  (+15 more)
(+33051 files in other folders)
